examples/test/testpolicy12247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12247
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key18: value47
      key41: value37
      key25: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value46
          key36: value2
          key42: value19
      podSelector:
        matchLabels:
          key20: value2
          key5: value46
